<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".BulletinActivity">

    <!--Header Text and Design Customizations-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Greetings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="News Today"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Layout Design Customizations-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Header"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <!--News Text and Design Customizations-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/article1"
                android:layout_width="380dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/white_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="171dp"
                    android:layout_height="123dp"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/article1" />

                <LinearLayout

                    android:layout_width="210dp"
                    android:layout_height="200dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="184dp"
                        android:layout_height="112dp"
                        android:gravity="start"
                        android:text="@string/articleTitle1"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/readbtn1"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="READ MORE" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/article2"
                android:layout_width="380dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/white_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/article1">

                <ImageView
                    android:layout_width="171dp"
                    android:layout_height="123dp"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/article2" />

                <LinearLayout

                    android:layout_width="210dp"
                    android:layout_height="200dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="184dp"
                        android:layout_height="112dp"
                        android:gravity="start"
                        android:text="@string/articleTitle2"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/readbtn2"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="READ MORE" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/article3"
                android:layout_width="380dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/white_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/article2">

                <ImageView
                    android:layout_width="171dp"
                    android:layout_height="123dp"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/article3" />

                <LinearLayout

                    android:layout_width="210dp"
                    android:layout_height="200dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="184dp"
                        android:layout_height="112dp"
                        android:gravity="start"
                        android:text="@string/articleTitle3"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/readbtn3"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="READ MORE" />

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/article4"
                android:layout_width="380dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/white_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/article3">

                <ImageView
                    android:layout_width="171dp"
                    android:layout_height="123dp"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/article4" />

                <LinearLayout

                    android:layout_width="210dp"
                    android:layout_height="200dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="183dp"
                        android:layout_height="91dp"
                        android:gravity="start"
                        android:text="@string/articleTitle4"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/readbtn4"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="READ MORE" />

                </LinearLayout>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>