<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight2"
    android:orientation="vertical"
    tools:context=".VaccinationCertificate">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintVertical_bias="0.0"
    tools:layout_editor_absoluteX="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Display user data -->
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryLight2"
            android:orientation="vertical"
            android:padding="0sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/certTitle"
                android:textAlignment="center"
                android:textSize="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Digital Certificate"
                android:textAlignment="center"
                android:textSize="16dp" />

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@color/colorPrimaryLight2"
                android:padding="20sp"
                android:src="@drawable/man" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="AMIRRUDIN ISMAIL BIN ADLAN RAHIM"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvIC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="969696665151"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- Display 1st vaccination detail -->
        <LinearLayout
            android:id="@+id/cardVac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:background="@drawable/background"
            android:orientation="vertical"
            android:padding="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/vacc1"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvVaccine1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Pfizer"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvDateTime1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="12/12/12, 09:00AM"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvFacility1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="KLCC"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- Display 2nd vaccination detail -->
        <LinearLayout
            android:id="@+id/cardVac2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:background="@drawable/background"
            android:orientation="vertical"
            android:outlineProvider="background"
            android:padding="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardVac">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/vacc2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvVaccine2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Pfizer"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvDateTime2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="12/12/12, 09:00AM"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvFacility2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="KLCC"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/homeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_marginTop="13dp"
            android:text="RETURN HOME"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardVac2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>