<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Menu1F">

    <!--Greetings Text and Design Customizations-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_bg"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Greetings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/greet"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Layout Design Customizations-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Header"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="139dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Icon Text and Design Customizations-->
            <LinearLayout
                android:id="@+id/Vaccine"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/white_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toStartOf="@id/NearbyHealthFacilities"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/vaccineImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:contentDescription="@string/app_name"
                    android:padding="0dp"
                    android:src="@drawable/icon1" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/NearbyHealthFacilities"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/white_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/Vaccine"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/nearbyImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/icon2" />



            </LinearLayout>

            <LinearLayout
                android:id="@+id/BMI"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/white_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="0dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toStartOf="@id/NearbyHealthFacilities"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Vaccine">

                <ImageView
                    android:id="@+id/bmiImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/icon3" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/Bulletin"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/white_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/Vaccine"
                app:layout_constraintTop_toBottomOf="@id/NearbyHealthFacilities">

                <ImageView
                    android:id="@+id/bulletinImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/icon4" />

            </LinearLayout>

            <!--Reminder Text and Design Customizations-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/reminder_bg"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="@id/Bulletin"
                app:layout_constraintStart_toStartOf="@id/Vaccine"
                app:layout_constraintTop_toBottomOf="@id/BMI">

                <TextView
                    android:id="@+id/Reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_bg"
                    android:paddingStart="8dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="2dp"
                    android:text="SAFETY REMINDER"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:maxLines="4"
                    android:text="@string/reminderText"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@id/Reminder" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>